--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
-https://gist.github.com/kevin-ci/8818e9245b262e10f4e193227ede59b8
+language: python
+python:
+    - "3.6.10"
+install: "pip install -r requirements.txt"
+script:
+    - SECRET_KEY="whatever" python manage.py test
